--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
 
+    <div class="container"></div>
+    <div id="fizzBuzz"></div>
+    <div id="fizz"></div>
+    <div id="buzz"></div>
 
 
-    
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
